cmake_minimum_required(VERSION 3.7)
project(cpp_primer_13)
set(CMAKE_CXX_STANDARD 14)

add_library(Folder.o Folder.cc Folder.h)
add_library(FolderMain.o FolderMain.cc Folder.h)
add_library(StrFolder.o StrFolder.cc StrFolder.h Strings.h)
add_library(StrFolderMain.o StrFolderMain.cc StrFolder.h Strings.h)
#add_executable(useStrVec.exe Strings.cc StrVec.cc useStrVec.cc)
#add_executable(FolderMain.exe Folder.cc StrFolder.cc StrFolderMain.cc)
add_executable(StrFolderMain.exe StrFolderMain.cc Folder.h StrFolder.h Strings.h)
