cmake_minimum_required(VERSION 3.7)
project(cpp_primer_9)
set(CMAKE_CXX_STANDARD 14)

add_executable(capacity.exe capacity.cc)
add_executable(erase1.exe erase1.cc)
add_executable(erase2.exe erase2.cc)
add_executable(find-str.exe find-str.cc)
add_executable(find_ops.exe find_ops.cc)
add_executable(refreshIter.exe refreshIter.cc)
add_executable(stack.exe stack.cc)
add_executable(str_assignOps.exe str_assignOps.cc)
add_executable(substr.exe substr.cc)
add_executable(useConvs.exe useConvs.cc)